--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test": "mocha test/*Test.js  --require @babel/register --reporter spec"
+    "test": "mocha test/*Test.js --timeout 40000  --require @babel/register --reporter spec --exit"
   },
   "keywords": [],
   "author": "",
