--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test": "mocha test/*Test.js --timeout 40000  --require @babel/register --reporter spec --exit"
+    "test": "mocha test/*Test.js --timeout 40000  --require @babel/register --reporter list --exit"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "@babel/register": "^7.6.2",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "faker": "^4.1.0",
     "mocha": "^6.2.2",
     "nodemon": "^1.19.4"
   },
